--- a/slimhamdi.net/moscow/demos/index-dark.html
+++ b/slimhamdi.net/moscow/demos/index-dark.html
@@ -102,7 +102,7 @@
                             <div class="selector uppercase" id="selector">
                                 <h3 class="ah-headline p-none m-none">
                                     <span class="font-weight-400">Hi There ! I am vinh</span>
-									<span class="my-name">Linda Smith</span>
+									<span class="my-name">Le Ngoc Vinh</span>
                                     <span class="ah-words-wrapper">
 										<b class="is-visible">web designer</b>
 										<b>developer</b>
