--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body, td {
 	}
 
 #subTitle {
-	background: #000;  color: #fff;  padding: 4px;  font-weight: bold; 
+	background: rgb(32, 32, 32);  color: rgb(255, 255, 255);  padding: 4px;  font-weight: bold; 
 	}
 
 #siteNavigation a, #siteNavigation .current {
