--- a/slimhamdi.net/moscow/demos/index-dark.html
+++ b/slimhamdi.net/moscow/demos/index-dark.html
@@ -104,9 +104,9 @@
                                     <span class="font-weight-400">Hi There ! I am vinh</span>
 									<span class="my-name">Le Ngoc Vinh</span>
                                     <span class="ah-words-wrapper">
-										<b class="is-visible">web designer</b>
-										<b>developer</b>
-										<b>blogger</b>
+										<b class="is-visible">I Am Good Boy :))</b>
+										<b>Skater</b>
+										<b>Designer</b>
 									</span>
                                 </h3>
                             </div>
@@ -162,27 +162,27 @@
 								</div>
                                 <div class="col s12 m12 l6 p-none">
                                     <ul class="second-font list-1">
-                                        <li><span class="font-weight-700">First Name: </span>Linda</li>
-                                        <li><span class="font-weight-700">Last Name: </span>Smith</li>
-                                        <li><span class="font-weight-700">Date of birth: </span>21 june 1990 </li>
-                                        <li><span class="font-weight-700">Nationality: </span>Russian</li>
-										<li><span class="font-weight-700">Freelance: </span>Available</li>
+                                        <li><span class="font-weight-700">First Name: </span>Vinh</li>
+                                        <li><span class="font-weight-700">Last Name: </span>Le</li>
+                                        <li><span class="font-weight-700">Date of birth: </span>xx/xx/2001 </li>
+                                        <li><span class="font-weight-700">Nationality: </span>Viet NAm</li>
+										<li><span class="font-weight-700">Freelance: </span>Seller</li>
                                     </ul>
                                 </div>
                                 <div class="col s12 m12 l6 p-none">
                                     <ul class="second-font list-2">
-                                        <li><span class="font-weight-700">Phone: </span>+34 21 18 40 10</li>
-                                        <li><span class="font-weight-700">Address: </span>Moscow, Russia</li>
-                                        <li><span class="font-weight-700">Email: </span>you@yourwebsite.com</li>
-                                        <li><span class="font-weight-700">Spoken Langages: </span>French - German</li>
-										<li><span class="font-weight-700">Skype: </span>linda.smith</li>
+                                        <li><span class="font-weight-700">Phone: </span>+84 373 60 1316</li>
+                                        <li><span class="font-weight-700">Address: </span>Phu Ly, Binh Luc, Ha Nam</li>
+                                        <li><span class="font-weight-700">Email: </span>k195510205141@tnut.edu.vn</li>
+                                        <li><span class="font-weight-700">Spoken Langages: </span>Vietnamese - English</li>
+										<li><span class="font-weight-700">Facebook: </span>CTISMEVTG</li>
                                     </ul>
                                 </div>
                                 <a href="#" class="btn font-weight-700">
 									Download Resume <i class="fa fa-file-pdf-o"></i>
 								</a>
-								<a href="blog-dark.html" class="btn btn-blog font-weight-700">
-									My Blog <i class="fa fa-edit"></i>
+								<a href="https://www.facebook.com/CTISMEVTG" class="btn btn-blog font-weight-700">
+									Follow Me <i class="fa fa-edit"></i>
 								</a>
                             </div>
                         </div>
