--- a/slimhamdi.net/moscow/demos/index-dark.html
+++ b/slimhamdi.net/moscow/demos/index-dark.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from slimhamdi.net/moscow/demos/index-dark.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Sep 2021 11:18:52 GMT -->
 <head>
     <meta charset="utf-8" />
-    <title>Moscow - Personal Portfolio</title>
+    <title>Một Chút Xíu thông Tin Của Tui Nè :></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 
@@ -165,7 +165,7 @@
                                         <li><span class="font-weight-700">First Name: </span>Vinh</li>
                                         <li><span class="font-weight-700">Last Name: </span>Le</li>
                                         <li><span class="font-weight-700">Date of birth: </span>xx/xx/2001 </li>
-                                        <li><span class="font-weight-700">Nationality: </span>Viet NAm</li>
+                                        <li><span class="font-weight-700">Nationality: </span>Viet Nam</li>
 										<li><span class="font-weight-700">Freelance: </span>Seller</li>
                                     </ul>
                                 </div>
