--- a/slimhamdi.net/moscow/demos/index-dark.html
+++ b/slimhamdi.net/moscow/demos/index-dark.html
@@ -121,8 +121,8 @@
                 <div class="bl-box valign-wrapper">
                     <div class="page-title center-align">
                         <h2 class="center-align">
-                            <span data-hover="About">About </span>
-                            <span data-hover="Me">Me</span>
+                            <span data-hover="Thông Tin">Thông Tin </span>
+                            <span data-hover="Về Mình">Về Mình</span>
                         </h2>
                     </div>
                 </div>
