--- a/slimhamdi.net/moscow/demos/index-dark.html
+++ b/slimhamdi.net/moscow/demos/index-dark.html
@@ -121,8 +121,8 @@
                 <div class="bl-box valign-wrapper">
                     <div class="page-title center-align">
                         <h2 class="center-align">
-                            <span data-hover="Thông Tin">Thông Tin </span>
-                            <span data-hover="Về Mình">Về Mình</span>
+                            <span data-hover="About">About </span>
+                            <span data-hover="Me">Me</span>
                         </h2>
                     </div>
                 </div>
@@ -226,25 +226,25 @@
                                                 <div class="resume-card-body-container second-font">
 													<!-- Single Experience Starts -->
                                                     <div class="resume-content">
-														<h6 class="uppercase"><span>Web Designer - </span>Envato</h6>
-														<span class="date"><i class="fa fa-calendar-o"></i> 2015 - 2018</span>
-														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p>
+														<h6 class="uppercase"><span>Công   </span>Việc</h6>
+														<span class="date"><i class="fa fa-calendar-o"></i> 2021</span>
+														<p>vừa học vừa làm, đã tự chủ được tài chính và có rất nhiều ý tưởng đang ấp ủ</p>
                                                     </div>
 													<!-- Single Experience Ends -->
                                                     <span class="separator"></span>
 													<!-- Single Experience Starts -->
                                                     <div class="resume-content">
-														<h6 class="uppercase"><span>Web Developer - </span>Google</h6>
-														<span class="date"><i class="fa fa-calendar-o"></i> 2011 - 2015</span>
-														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p>
+														<h6 class="uppercase"><span>Sở </span>Thích</h6>
+														<span class="date"><i class="fa fa-calendar-o"></i> 2020 - 2021</span>
+														<p>I love Skateboarding, mình đã chơi môn thể thao này được 2 năm, có thêm rất nhiều những người bạn tốt và đặc biệt nó giúp mình mạnh mẽ hơn rất nhiều. </p>
                                                     </div>
 													<!-- Single Experience Ends -->
                                                     <span class="separator"></span>
 													<!-- Single Experience Starts -->
                                                     <div class="resume-content">
-														<h6 class="uppercase"><span>Community Manager - </span>Adobe</h6>
-														<span class="date"><i class="fa fa-calendar-o"></i> 2007 - 2011</span>
-														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium orci sit amet mi ullamcorper</p>
+														<h6 class="uppercase"><span>E-</span> </span>Sport</h6>
+														<span class="date"><i class="fa fa-calendar-o"></i> 2017 - 2021</span>
+														<p>Mình rất thích chơi liên quân và có 1 kênh TikTok về nó, follow ngay tại [fb.ctismevtg] <3</p>
                                                     </div>
 													<!-- Single Experience Ends -->
                                                 </div>
@@ -434,8 +434,8 @@
                 <div class="bl-box valign-wrapper">
                     <div class="page-title center-align">
                         <h2 class="center-align">
-                            <span data-hover="my">my </span>
-                            <span data-hover="portfolio">portfolio</span>
+                            <span data-hover="Inspirational">inspirational </span>
+                            <span data-hover="People">People</span>
                         </h2>
                     </div>
                 </div>
@@ -445,8 +445,8 @@
                     <!-- Main Heading Starts -->
                     <div class="container page-title center-align">
                         <h2 class="center-align">
-                            <span data-hover="my">my </span>
-                            <span data-hover="portfolio">portfolio</span>
+                            <span data-hover="Inspirational">Inspirational </span>
+                            <span data-hover="People">People</span>
                         </h2>
                     </div>
                     <!-- Main Heading Ends -->
