--- a/slimhamdi.net/moscow/demos/index-dark.html
+++ b/slimhamdi.net/moscow/demos/index-dark.html
@@ -573,20 +573,20 @@
                             <div class="col s12 m5 l5 xl4 leftside">
 								<!-- Contacts Starts -->
                                 <h6 class="font-weight-700 uppercase">Phone</h6>
-                                <span class="font-weight-400 second-font"><i class="fa fa-phone"></i> +34 62 11 84 01</span>
+                                <span class="font-weight-400 second-font"><i class="fa fa-phone"></i> 0373601316</span>
 								<h6 class="font-weight-700 uppercase">Email</h6>
-								<span class="font-weight-400 second-font"><i class="fa fa-envelope"></i> you@youwebsite.com</span>
+								<span class="font-weight-400 second-font"><i class="fa fa-envelope"></i> k195510205141@gmail.com</span>
 								<h6 class="font-weight-700 uppercase">Skype</h6>
-								<span class="font-weight-400 second-font"><i class="fa fa-skype"></i> linda.smith</span>
+								<span class="font-weight-400 second-font"><i class="fa fa-skype"></i> CTISMEVTG</span>
 								<h6 class="font-weight-700 uppercase">Address</h6>
-								<span class="font-weight-400 second-font"><i class="fa fa-home"></i>  Moscow, Russia</span><br>
+								<span class="font-weight-400 second-font"><i class="fa fa-home"></i>  Hà  Nam, Việt Nam</span><br>
 								<!-- Contacts Ends -->
 								<!-- Social Media Profiles Starts -->
                                 <h6 class="font-weight-700 uppercase">Social Profiles</h6>
                                 <div class="social">
                                     <ul class="list-inline social social-intro center-align p-none">
-                                        <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                        <li class="facebook"><a href="https://www.facebook.com/CTISMEVTG"><i class="fa fa-facebook"></i></a></li>
+                                        <li class="twitter"><a href="https://twitter.com/LeNgocV57964929"><i class="fa fa-twitter"></i></a></li>
                                         <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                         <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
